[gd_scene load_steps=22 format=2]

[ext_resource path="res://Boxes/Hitbox.tscn" type="PackedScene" id=1]
[ext_resource path="res://NPCs/professor.png" type="Texture" id=2]
[ext_resource path="res://Boxes/Hurtbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Boxes/SoftCollision.tscn" type="PackedScene" id=4]
[ext_resource path="res://NPCs/WanderController.tscn" type="PackedScene" id=5]
[ext_resource path="res://NPCs/PlayerDetectionZone.tscn" type="PackedScene" id=6]
[ext_resource path="res://NPCs/SmartMan.gd" type="Script" id=7]

[sub_resource type="CapsuleShape2D" id=1]
radius = 4.60988
height = 6.95673

[sub_resource type="Animation" id=2]
resource_name = "WalkDown"
length = 0.9
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 10, 11, 12, 13, 14, 15, 16, 17, 9 ]
}

[sub_resource type="Animation" id=3]
resource_name = "WalkUp"
length = 0.9
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 6, 7, 8, 0 ]
}

[sub_resource type="AnimationNodeAnimation" id=4]
animation = "WalkDown"

[sub_resource type="AnimationNodeAnimation" id=5]
animation = "WalkUp"

[sub_resource type="AnimationNodeAnimation" id=6]
animation = "WalkDown"

[sub_resource type="AnimationNodeAnimation" id=7]
animation = "WalkDown"

[sub_resource type="AnimationNodeBlendSpace2D" id=8]
blend_point_0/node = SubResource( 4 )
blend_point_0/pos = Vector2( 0, 1.1 )
blend_point_1/node = SubResource( 5 )
blend_point_1/pos = Vector2( 0, -1.1 )
blend_point_2/node = SubResource( 6 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 7 )
blend_point_3/pos = Vector2( -1, 0 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeStateMachine" id=9]
states/Walk/node = SubResource( 8 )
states/Walk/position = Vector2( 515, 76 )
start_node = "Walk"

[sub_resource type="AnimationNodeStateMachinePlayback" id=10]

[sub_resource type="CircleShape2D" id=11]
radius = 75.7766

[sub_resource type="CapsuleShape2D" id=12]
radius = 10.121
height = 0.261944

[sub_resource type="CapsuleShape2D" id=13]
radius = 11.2808
height = 9.19535

[sub_resource type="CapsuleShape2D" id=14]
radius = 4.02997
height = 9.27637

[node name="SmartMan" type="KinematicBody2D"]
collision_layer = 4
script = ExtResource( 7 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -12 )
texture = ExtResource( 2 )
hframes = 18
frame = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
rotation = -1.5708
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/WalkDown = SubResource( 2 )
anims/WalkUp = SubResource( 3 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 9 )
anim_player = NodePath("../AnimationPlayer")
parameters/playback = SubResource( 10 )
parameters/Walk/blend_position = Vector2( -0.0012092, 0 )

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 6 )]

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
position = Vector2( -0.552078, -0.36805 )
shape = SubResource( 11 )

[node name="Hitbox" parent="." instance=ExtResource( 1 )]
visible = false
collision_mask = 8

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( 0, -7 )
shape = SubResource( 12 )

[node name="Hurtbox" parent="." instance=ExtResource( 3 )]
collision_layer = 16
collision_mask = 0

[node name="CollisionShape" parent="Hurtbox" index="0"]
position = Vector2( 0, -11 )
shape = SubResource( 13 )

[node name="SoftCollision" parent="." instance=ExtResource( 4 )]

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
rotation = -1.5708
shape = SubResource( 14 )

[node name="WanderController" parent="." instance=ExtResource( 5 )]
wander_range = 70
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]

[editable path="PlayerDetectionZone"]

[editable path="Hitbox"]

[editable path="Hurtbox"]

[editable path="SoftCollision"]

[editable path="WanderController"]
